<resources>
    <string name="app_name">InventoryWidget</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fb_add">Add a product</string>
    <string name="Inventory">Inventory</string>
    <string name="edit_product">Edit Product</string>
    <string name="eliminar">Eliminar</string>
    <string name="total">Total</string>
    <string name="cantidad_disponible">Cantidad Disponible</string>
    <string name="precio_unidad">Precio Unidad:</string>
    <string name="producto">Producto</string>
    <string name="tittle_biometrics">Autenticación con biometría</string>
    <string name="subtitle_biometrics">Ingrese su huella digital</string>
    <string name="cancelar">Cancelar</string>
    <string name="exit_button">Exit Button</string>
    <string name="guardar">Guardar</string>
    <string name="codigo_producto">Código producto</string>
    <string name="nombre_articulo">Nombre artículo</string>
    <string name="precio">Precio</string>
    <string name="cantidad">Cantidad</string>
    <string name="descWidget">App Widget</string>
    <string name="widgetIn">¿Cuánto tengo de inventario?</string>
    <string name="default_price_w">$ ****</string>
    <string name="g_inv">Gestionar inventario</string>
    <string name="editar">Editar</string>
    <string name="id">Id:</string>
    <string name="icono">icono</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="Registrarse">Registrarse</string>
</resources>