<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fillViewport="true"
      tools:context=".view.fragment.EditProduct"
      android:background="@color/black_specific"
      >

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/black_specific"
      tools:context=".view.fragment.EditProduct">

      <include
        android:id="@+id/contentToolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <TextView
        android:id="@+id/labelId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="40dp"
        android:text="@string/id"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/contentToolbar"
        app:layout_constraintStart_toStartOf="parent" />

      <TextView
        android:id="@+id/labelNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="40dp"
        android:text="ID ejemplo"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/contentToolbar"
        app:layout_constraintStart_toEndOf="@id/labelId" />

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EDnombreArticulo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/light_gray"
        android:hint="@string/nombre_articulo"
        android:padding="4dp"
        android:textColorHint="@color/white"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/textinput_stroke_colors"
        app:counterOverflowTextColor="@color/white"
        app:counterTextColor="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/EDprecio"
        app:layout_constraintTop_toBottomOf="@id/labelNumero">


        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/editNombreArticulo"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="text"
          android:maxLength="40"
          android:textColor="@color/white"
          android:text="Nombre ejemplo"/>

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EDprecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"

        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/precio"
        android:padding="4dp"
        android:textColorHint="@color/white"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/textinput_stroke_colors"
        app:counterOverflowTextColor="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/EDcantidad"
        app:layout_constraintTop_toBottomOf="@id/EDnombreArticulo">


        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/editPrecio"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="numberDecimal"
          android:maxLength="20"
          android:textColor="@color/white"
          android:text="Precio ejemplo"/>

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EDcantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"

        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/cantidad"
        android:padding="4dp"
        android:textColorHint="@color/white"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/textinput_stroke_colors"
        app:counterOverflowTextColor="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/btnEditar"
        app:layout_constraintTop_toBottomOf="@id/EDprecio">


        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/editCantidad"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="number"
          android:maxLength="4"
          android:textColor="@color/white"
          android:text="Cant"/>

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="15dp"
        android:text="@string/editar"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/button_state_color"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EDcantidad"
        app:rippleColor="@color/white" />


    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.core.widget.NestedScrollView>
</layout>