<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".view.fragment.AddProduct"
        android:background="@color/black_specific"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.fragment.AddProduct"

            >

            <include
                android:id="@+id/contentToolbar"
                layout="@layout/toolbar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                />



            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/EDcodigoProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintTop_toBottomOf="@id/contentToolbar"
                app:layout_constraintBottom_toTopOf="@id/EDnombreArticulo"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/codigo_producto"
                android:textColorHint="@color/white"
                app:counterTextColor="@color/white"
                app:boxBackgroundMode="outline"
                android:backgroundTint="@color/light_gray"
                app:boxStrokeColor="@color/textinput_stroke_colors"
                app:hintTextColor="@color/white"
                app:counterOverflowTextColor="@color/white">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editCodigoProducto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="4"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/EDnombreArticulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"

                app:layout_constraintTop_toBottomOf="@id/EDcodigoProducto"
                app:layout_constraintBottom_toTopOf="@id/EDprecio"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/nombre_articulo"
                android:textColorHint="@color/white"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/textinput_stroke_colors"
                app:hintTextColor="@color/white"
                app:counterOverflowTextColor="@color/white"
                android:layout_marginBottom="15dp"
                >


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editNombreArticulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:maxLength="40"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/EDprecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"

                app:layout_constraintTop_toBottomOf="@id/EDnombreArticulo"
                app:layout_constraintBottom_toTopOf="@id/EDcantidad"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"

                android:hint="@string/precio"
                android:textColorHint="@color/white"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/textinput_stroke_colors"
                app:hintTextColor="@color/white"
                app:counterOverflowTextColor="@color/white"
                >


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editPrecio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:maxLength="20"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/EDcantidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_marginBottom="15dp"

                app:layout_constraintTop_toBottomOf="@id/EDprecio"
                app:layout_constraintBottom_toTopOf="@id/btnGuardar"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"

                android:hint="@string/cantidad"
                android:textColorHint="@color/white"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/textinput_stroke_colors"
                app:hintTextColor="@color/white"
                app:counterOverflowTextColor="@color/white">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editCantidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="4"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGuardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guardar"
                android:textColor="@android:color/white"
                android:layout_marginTop="45dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                app:backgroundTint="@color/button_state_color"
                app:cornerRadius="16dp"
                app:rippleColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/EDcantidad"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>